DSS-681: Micro-performance fixes
git-svn-id: https://svn.cesecore.eu/svn/signserver-restricted/trunk@3717 91c8134f-2a44-0410-ba45-dce2f532dbc6