@@ -59,16 +59,16 @@ public class TSPUtil
 
     static
     {
-        digestLengths.put(PKCSObjectIdentifiers.md5.getId(), new Integer(16));
-        digestLengths.put(OIWObjectIdentifiers.idSHA1.getId(), new Integer(20));
-        digestLengths.put(NISTObjectIdentifiers.id_sha224.getId(), new Integer(28));
-        digestLengths.put(NISTObjectIdentifiers.id_sha256.getId(), new Integer(32));
-        digestLengths.put(NISTObjectIdentifiers.id_sha384.getId(), new Integer(48));
-        digestLengths.put(NISTObjectIdentifiers.id_sha512.getId(), new Integer(64));
-        digestLengths.put(TeleTrusTObjectIdentifiers.ripemd128.getId(), new Integer(16));
-        digestLengths.put(TeleTrusTObjectIdentifiers.ripemd160.getId(), new Integer(20));
-        digestLengths.put(TeleTrusTObjectIdentifiers.ripemd256.getId(), new Integer(32));
-        digestLengths.put(CryptoProObjectIdentifiers.gostR3411.getId(), new Integer(32));
+        digestLengths.put(PKCSObjectIdentifiers.md5.getId(), Integer.valueOf(16));
+        digestLengths.put(OIWObjectIdentifiers.idSHA1.getId(), Integer.valueOf(20));
+        digestLengths.put(NISTObjectIdentifiers.id_sha224.getId(), Integer.valueOf(28));
+        digestLengths.put(NISTObjectIdentifiers.id_sha256.getId(), Integer.valueOf(32));
+        digestLengths.put(NISTObjectIdentifiers.id_sha384.getId(), Integer.valueOf(48));
+        digestLengths.put(NISTObjectIdentifiers.id_sha512.getId(), Integer.valueOf(64));
+        digestLengths.put(TeleTrusTObjectIdentifiers.ripemd128.getId(), Integer.valueOf(16));
+        digestLengths.put(TeleTrusTObjectIdentifiers.ripemd160.getId(), Integer.valueOf(20));
+        digestLengths.put(TeleTrusTObjectIdentifiers.ripemd256.getId(), Integer.valueOf(32));
+        digestLengths.put(CryptoProObjectIdentifiers.gostR3411.getId(), Integer.valueOf(32));
 
         digestNames.put(PKCSObjectIdentifiers.md5.getId(), "MD5");
         digestNames.put(OIWObjectIdentifiers.idSHA1.getId(), "SHA1");
